@@ -295,11 +295,11 @@ public class DataWrapper implements KnowledgeEditable, KnowledgeBoxInput,
                     throw new IllegalArgumentException("Expecting a continuous variable: " + variable);
                 }
 
-                x[j] = data.getDouble(i, data.getColumn(variable));
+                x[j] = data.getDouble(i, data.getColumnIndex(variable));
             }
 
             double yHat = result.getPredictedValue(x);
-            data2.setDouble(i, data2.getColumn(data2.getVariable(predictedVariable)), yHat);
+            data2.setDouble(i, data2.getColumnIndex(data2.getVariable(predictedVariable)), yHat);
         }
 
         DataModelList dataModelList = new DataModelList();
@@ -586,7 +586,7 @@ public class DataWrapper implements KnowledgeEditable, KnowledgeBoxInput,
         if (this.dataModelList.size() > 1) {
             paramSettings.put("# Datasets", Integer.toString(this.dataModelList.size()));
         } else {
-            DataModel dataModel = this.dataModelList.get(0);
+            DataModel dataModel = this.dataModelList.getFirst();
 
             if (dataModel instanceof CovarianceMatrix) {
                 paramSettings.put("# Vars", Integer.toString(((CovarianceMatrix) dataModel).getDimension()));
